@@ -1,0 +1,15 @@
+#! /bin/sh
+set -e
+
+set -- $DEB_MAINT_PARAMS
+mode="${1#'}"
+mode="${mode%'}"
+case $0:$mode in
+    # Only run on postinst configure and postrm remove, to avoid wasting
+    # time by calling update-grub multiple times on upgrade and removal.
+    */postinst.d/*:configure|*/postrm.d/*:remove)
+	exec update-grub
+	;;
+esac
+
+exit 0
