@@ -1,0 +1,1 @@
+etc/kernel/postinst.d/zz-update-grub	etc/kernel/postrm.d/zz-update-grub
