@@ -1,5 +1,11 @@
 grub2 (1.98+20100802-2) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
+  * Add kernel hook scripts and remove any uses of update-grub as a
+    postinst_hook or postrm_hook in /etc/kernel-img.conf (closes: #554175).
+    Thanks to Ben Hutchings for advice and to Harald Braumann for an early
+    implementation.
+
   [ Updated translations ]
   * Slovak (sk.po) by Slavko (closes: #591458).
 
